--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "firebase": "^6.0.2",
     "lodash": "^4.17.11",
     "node-sass": "^4.12.0",
     "react": "^16.5.2",
